webengine-workflow (0.4.0~dev-1) unstable; urgency=low

  * New upstream release.
  * Add sjwebkit dependency.

 -- Bryann Lamour <bryann.lamour@smartjog.com>  Wed, 27 Jul 2011 14:37:51 +0200

webengine-workflow (0.3.2-1) unstable; urgency=low

  * New upstream release.

 -- Rémi Cardona <remi.cardona@smartjog.com>  Wed, 27 Jul 2011 16:51:20 +0200

webengine-workflow (0.3.1-1) unstable; urgency=low

  * New upstream release.

 -- Rémi Cardona <remi.cardona@smartjog.com>  Tue, 26 Jul 2011 14:11:15 +0200

webengine-workflow (0.3.0-1) unstable; urgency=low

  * New upstream release.

 -- Rémi Cardona <remi.cardona@smartjog.com>  Wed, 13 Jul 2011 16:34:21 +0200

webengine-workflow (0.2.0-1) unstable; urgency=low

  [ Rémi Cardona ]
  * New upstream release.
  * Update copyright as package is now under the LGPL 2.1.
  * Bump Standards-Version to 3.9.2.

  [ Bryann Lamour ]
  * Add libjs-backbone dependency.
  * Add libjs-jquery-ui dependency.

 -- Rémi Cardona <remi.cardona@smartjog.com>  Wed, 01 Jun 2011 11:19:17 +0200

webengine-workflow (0.1.0-1) unstable; urgency=low

  [ Bryann Lamour ]
  * Add myself to Uploaders.
  * Update Standards-Version.
  * Remove empty Recommends.
  * Update Copyright to 2010-2011.
  * Extend description.

  [ Rémi Cardona ]
  * Initial release.
  * Added myself to Uploaders.

 -- Rémi Cardona <remi.cardona@smartjog.com>  Fri, 06 May 2011 17:02:55 +0200