@@ -1,10 +1,8 @@
-SUBDIRS = templates medias locale templatetags appteam
+SUBDIRS = templates medias locale templatetags models
 dist_workflow_PYTHON =	\
 	admin.py	\
 	forms.py	\
 	__init__.py	\
-	models.py	\
-	teammodels.py	\
 	urls.py		\
 	views.py
 dist_doc_DATA = README.rst
