@@ -1,6 +1,0 @@
-dist_appteam_PYTHON = \
-	__init__.py	\
-	team_forms.py	\
-	team_models.py	\
-	team_urls.py	\
-	team_views.py
