@@ -9,7 +9,7 @@ Standards-Version: 3.9.2
 
 Package: webengine-workflow
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, webengine (>= 0.12.0), webengine-team, libjs-backbone (>= 0.3.3), libjs-jquery-ui (>= 1.7), sjwebkit (>= 1.1.3+svn1975)
+Depends: ${misc:Depends}, ${python:Depends}, webengine (>= 0.12.0), libjs-backbone (>= 0.3.3), libjs-jquery-ui (>= 1.7), sjwebkit (>= 1.1.3+svn1975)
 XB-Python-Version: ${python:Versions}
 Description: Plugin workflow for WebEngine
  Workflow page, useful to manage RVP
