@@ -1,0 +1,5 @@
+SUBDIRS =
+dist_models_DATA = \
+	__init__.py \
+	models.py \
+	teammodels.py
